src/components/PageHeader.css
.PageHeader {
  background-color: var(--darkGrey);
  color: white;
  padding: 15rem 0;
  text-align: center;
}

.PageHeader .BackgroundImage {
  opacity: 0.8;
}

.PageHeader-large {
  padding: 20rem 0;
}

.PageHeader--Title {
  font-size: 6rem;
  margin-bottom: 0;
  font-family: 'Source Serif Pro', sans-serif;
}

.PageHeader--Subtitle {
  font-weight: 400;
  font-size: 1.8rem;
}

.PageHeader .container {
  animation: fadeIn 0.5s ease-out;
}
.header-box{
  width: 25% !important;
  border: 4px solid white;
  border-right-style: hidden;
  padding: 5rem 3rem;
  margin-left: 10rem;
  background: linear-gradient(to top, white 30%, transparent 20%, transparent 70%, white 70%) no-repeat;
  background-size: 4px 100%;
  background-position: 100% 0;

}

@media (max-width: 600px) {
  .PageHeader {
    padding: 7rem 0;
  }
  .PageHeader-large {
    padding: 12.5rem 0;
  }
  .PageHeader--Title {
    font-size: 3rem;
  }
  /* .header-box{
    margin: 0 auto;
    width: 50%;
  } */
}

